[package]
name = "glcm"
version = "0.1.0"
edition = "2024"

[dependencies]
array-lib = {git = "ssh://git@github.com/wyatt-A/array-lib", features = ["io-nifti"]}
ndarray = "0.16.1"
ndarray-linalg = { version = "0.17.0" }

rayon = "1.10.0"

[dev-dependencies]
rand = "0.9.1"

[features]
mkl-static = ["ndarray-linalg/intel-mkl-static"]
openblas-system = ["ndarray-linalg/openblas-system"]
netlib-system = ["ndarray-linalg/netlib-system"]
