[package]
name = "glcm"
version = "0.1.0"
edition = "2024"

[dependencies]
array-lib = {git = "ssh://git@github.com/wyatt-A/array-lib", features = ["io-nrrd","io-nifti"]}
lax = { version = "0.17.0", features = ["intel-mkl-static"] }
#clap = { version = "4.5.41", features = ["derive"] }
##eframe = { version = "0.32" }
#eframe = { version = "0.32" }
##wgpu = { version = "25", default-features = false, features = ["dx12"] }
#ndarray = "0.16.1"
#ndarray-linalg = { version = "0.17.0" }
num-traits = "0.2.19"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
toml = "0.9.2"

[dev-dependencies]
rand = "0.9.1"

[features]
#mkl-static = ["ndarray-linalg/intel-mkl-static"]
#openblas-system = ["ndarray-linalg/openblas-system"]
#netlib-system = ["ndarray-linalg/netlib-system"]
